# PostAutomationBot

./: .gitignore  Makefile  NOTIFICATION_TEST_REPORT.md  QUICK_START.md  README.md  api_client.py  check_status.py  config.py  content_fetcher.py  database.py  demo_notifications.py  env_example.txt  main.py  manage_service.sh  notifier.py  poster_bot.py  pyproject.toml  requirements.txt  scheduler.py  setup.py  setup.sh  setup_background_service.sh  test_api.py  test_bot.py  test_notifications.py
autopost/: __init__.py  __main__.py
autopost/api/: client.py
autopost/config/: settings.py
autopost/content/: fetcher.py
autopost/core/: bot.py
autopost/database/: manager.py
autopost/services/: scheduler.py
autopost/tests/: demo_notifications.py  test_api.py  test_bot.py  test_notifications.py
autopost/utils/: check_status.py  notifier.py
docs/: BACKGROUND_SERVICE_README.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md
scripts/: autopost-bot.service  setup_database.sql  start_bot.sh
